Bugfix: Now allowing horizontal scroll for the report if the window is too narrow. Thanks @pirolla for the report.

--- a/moneylog.css
+++ b/moneylog.css
@@ -37,6 +37,7 @@ body {
 #content {
 	margin-left: 217px;  /* See toggleFullScreen, #toolbar */
 	padding: 30px;
+	overflow: auto;
 }
 
 /* ---------------------------------------------- Misc */
